--- a/src/app/typer/typer.component.css
+++ b/src/app/typer/typer.component.css
@@ -15,7 +15,7 @@
   border: 1px solid transparent;
   outline: none; /* Remove focus outline */
   overflow: hidden; /* Enable scrolling if needed */
-  background-color: rgba(42, 209, 42, 0.322);
+  /* background-color: rgba(42, 209, 42, 0.322); */
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -111,4 +111,21 @@ button {
 .timing p {
   /* padding-bottom: 10px; */
   margin: 5px;
+}
+
+.dropbtn {
+  /* background-color: #007bff; */
+  /* color: white; */
+  /* padding: 10px; */
+  font-size: 16px;
+  border: none;
+  cursor: pointer;
+}
+
+.dropbtn.active {
+  background-color: #92ffab; /* Change to green when active */
+}
+
+.dropup-content button.active:hover {
+  /* background-color: #218838; */
 }
