feat(typing): Added the countdown feature for all the time period

--- a/src/app/typer/typer.component.css
+++ b/src/app/typer/typer.component.css
@@ -130,3 +130,8 @@ button {
 .dropup-content button.active:hover {
   /* background-color: #218838; */
 }
+
+.countdown-container {
+  padding-top:10px;
+  color : rgba(57, 57, 57, 0.836)
+}
