--- a/src/app/typer/typer.component.html
+++ b/src/app/typer/typer.component.html
@@ -16,6 +16,9 @@
         </span>
       </p>
     </div>
+    <div class="countdown-container">
+      <h1>{{ countdown }}</h1>
+    </div>
   </div>
 </div>
 <div class="timing">
@@ -34,6 +37,7 @@
   </div>
   <button (click)="resetTyping()">Close</button>
 </div>
+
 
 <!-- <div class="footer"> -->
 
